Fix viewport height of main setion on mobile

--- a/css/master.css
+++ b/css/master.css
@@ -121,6 +121,10 @@ a {
 }
 
 @media only screen and (max-width: 768px) {
+  #main
+  {
+    height: 95vh;
+  }
   .navbar
   {
     padding: .25rem 0rem;
